adding link to href of the home page component

--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -7,6 +7,7 @@
       <h1>
         <img src="../../../assets/news_icon.png" alt="">
         اخبار
+        <a href="/news">مشاهده بیشتر</a>
       </h1>
       <mat-card class="main-news">
         <a href="/news/1">
@@ -69,47 +70,55 @@
     <!-- sub news mat card  -->
 
     <div class="col-lg-2 col-md-6 col-sm-6 col-12">
-      <mat-card class="example-card">
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and
-          </p>
-        </mat-card-content>
-      </mat-card>
+      <a href="/news/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <p>
+              The Shiba Inu is the smallest of the six original and
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </a>
     </div>
 
     <div class="col-lg-2 col-md-6 col-sm-6 col-12">
-      <mat-card class="example-card">
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and
-          </p>
-        </mat-card-content>
-      </mat-card>
+      <a href="/news/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <p>
+              The Shiba Inu is the smallest of the six original and
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </a>
     </div>
 
     <div class="col-lg-2 col-md-6 col-sm-6 col-12">
-      <mat-card class="example-card">
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and
-          </p>
-        </mat-card-content>
-      </mat-card>
+      <a href="/news/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <p>
+              The Shiba Inu is the smallest of the six original and
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </a>
     </div>
 
     <div class="col-lg-2 col-md-6 col-sm-6 col-12">
-      <mat-card class="example-card">
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and
-          </p>
-        </mat-card-content>
-      </mat-card>
+      <a href="/news/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <p>
+              The Shiba Inu is the smallest of the six original and
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </a>
     </div>
 
   </div>
@@ -127,10 +136,13 @@
       <h1>
         <img src="../../../assets/learning_icon.png" alt="">
         آموزش
+        <a href="/learn">مشاهده بیشتر</a>
       </h1>
 
       <mat-card class="main-news">
-        <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <a href="/learn/article/id">
+          <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        </a>
         <mat-card-content>
           <p>
             The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
@@ -152,18 +164,40 @@
 
       <mat-list role="list">
         <mat-list-item role="listitem">
-          <a>sdkjsjd</a>
+          <a href="/learn/article/id">
+            sdkjsjd
+          </a>
         </mat-list-item>
         <mat-divider></mat-divider>
-        <mat-list-item role="listitem">Itdfgsd sdfg sddg sgsdfbem 2</mat-list-item>
+        <mat-list-item role="listitem">
+          <a href="/learn/article/id">
+            Itdfgsd sdfg sddg sgsdfbem 2
+          </a>
+        </mat-list-item>
         <mat-divider></mat-divider>
-        <mat-list-item role="listitem">Item 3</mat-list-item>
+        <mat-list-item role="listitem">
+          <a href="/learn/article/id">
+            Item 3
+          </a>
+        </mat-list-item>
         <mat-divider></mat-divider>
-        <mat-list-item role="listitem">Item 3</mat-list-item>
+        <mat-list-item role="listitem">
+          <a href="/learn/article/id">
+            Item 3
+          </a>
+        </mat-list-item>
         <mat-divider></mat-divider>
-        <mat-list-item role="listitem">Item 3</mat-list-item>
+        <mat-list-item role="listitem">
+          <a href="/learn/article/id">
+            Item 3
+          </a>
+        </mat-list-item>
         <mat-divider></mat-divider>
-        <mat-list-item role="listitem">Item 3</mat-list-item>
+        <mat-list-item role="listitem">
+          <a href="/learn/article/id">
+            Item 3
+          </a>
+        </mat-list-item>
       </mat-list>
     </div>
 
@@ -176,47 +210,55 @@
     </div>
 
     <div class="col-lg-2 col-md-6 col-sm-6 col-12">
-      <mat-card class="example-card">
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and
-          </p>
-        </mat-card-content>
-      </mat-card>
+      <a href="/learn/article/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <p>
+              The Shiba Inu is the smallest of the six original and
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </a>
     </div>
 
     <div class="col-lg-2 col-md-6 col-sm-6 col-12">
-      <mat-card class="example-card">
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and
-          </p>
-        </mat-card-content>
-      </mat-card>
+      <a href="/learn/article/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <p>
+              The Shiba Inu is the smallest of the six original and
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </a>
     </div>
 
     <div class="col-lg-2 col-md-6 col-sm-6 col-12">
-      <mat-card class="example-card">
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and
-          </p>
-        </mat-card-content>
-      </mat-card>
+      <a href="/learn/article/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <p>
+              The Shiba Inu is the smallest of the six original and
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </a>
     </div>
 
     <div class="col-lg-2 col-md-6 col-sm-6 col-12">
-      <mat-card class="example-card">
-        <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-        <mat-card-content>
-          <p>
-            The Shiba Inu is the smallest of the six original and
-          </p>
-        </mat-card-content>
-      </mat-card>
+      <a href="/learn/article/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <p>
+              The Shiba Inu is the smallest of the six original and
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </a>
     </div>
 
   </div>
