making learn child like news component that show the list of items

--- a/src/app/modules/learn/learn.component.html
+++ b/src/app/modules/learn/learn.component.html
@@ -1,4 +1,6 @@
-<div class="container">
+<router-outlet></router-outlet>
+
+<div class="container" *ngIf="isDetail">
   <div class="row" dir="rtl">
     <div class="col-lg-9 content_box">
       <div>
