--- a/src/app/modules/news/news.component.scss
+++ b/src/app/modules/news/news.component.scss
@@ -11,3 +11,34 @@ mat-divider {
   font-family: "BKoodakBold";
   font-size: 30px;
 }
+
+.video_box {
+  .example-card {
+    .play_icon img {
+      position: absolute;
+      left: 40%;
+      top: 25%;
+      width: 50px;
+      height: 50px;
+    }
+
+    .play_icon img:hover {
+      width: 55px;
+      height: 55px;
+    }
+  }
+}
+
+
+.play_icon img {
+  position: absolute;
+  left: 40%;
+  top: 25%;
+  width: 50px;
+  height: 50px;
+}
+
+.play_icon img:hover {
+  width: 55px;
+  height: 55px;
+}
