--- a/src/app/modules/news/news.component.html
+++ b/src/app/modules/news/news.component.html
@@ -1,6 +1,270 @@
 <router-outlet></router-outlet>
 
 <div class="container" *ngIf="mainNews">
+
+  <mat-tab-group mat-align-tabs="center" *ngIf="isLearn">
+    <mat-tab label="نمایش همه">
+      <div class="row" dir="rtl" *ngIf="isLearn">
+        <div class="col-lg-12 title">
+          <h1>عنوان مجموعه خبر</h1>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+          <a href="/learn/article/id">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </a>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+          <a href="/learn/article/id">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </a>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+          <a href="/learn/article/id">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </a>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+          <a href="/learn/article/id">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </a>
+        </div>
+      </div>
+
+      <mat-divider style="margin-top: 7%;"></mat-divider>
+
+      <div class="row video_box" dir="rtl" *ngIf="isLearn">
+        <div class="col-lg-12 title">
+          <h1>عنوان مجموعه فیلم</h1>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+          <a href="/learn/film/id">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <a href="/learn/film/id" class="play_icon">
+                <img src="../../../assets/play.png" alt="">
+              </a>
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </a>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+          <a href="/learn/film/id">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <a href="/learn/film/id" class="play_icon">
+                <img src="../../../assets/play.png" alt="">
+              </a>
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </a>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+          <a href="/learn/film/id">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <a href="/learn/film/id" class="play_icon">
+                <img src="../../../assets/play.png" alt="">
+              </a>
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </a>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+          <a href="/learn/film/id">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <a href="/learn/film/id" class="play_icon">
+                <img src="../../../assets/play.png" alt="">
+              </a>
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </a>
+        </div>
+      </div>
+
+    </mat-tab>
+
+    <mat-tab label="مقالات">
+      <div class="row" dir="rtl" *ngIf="isLearn">
+        <div class="col-lg-12 title">
+          <h1>عنوان مجموعه خبر</h1>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+          <a href="/learn/article/id">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </a>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+          <a href="/learn/article/id">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </a>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+          <a href="/learn/article/id">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </a>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+          <a href="/learn/article/id">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </a>
+        </div>
+      </div>
+    </mat-tab>
+    <mat-tab label="ویدئوها">
+      <div class="row video_box" dir="rtl" *ngIf="isLearn">
+        <div class="col-lg-12 title">
+          <h1>عنوان مجموعه فیلم</h1>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+          <a href="/learn/film/id">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <a href="/learn/film/id" class="play_icon">
+                <img src="../../../assets/play.png" alt="">
+              </a>
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </a>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+          <a href="/learn/film/id">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <a href="/learn/film/id" class="play_icon">
+                <img src="../../../assets/play.png" alt="">
+              </a>
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </a>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+          <a href="/learn/film/id">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <a href="/learn/film/id" class="play_icon">
+                <img src="../../../assets/play.png" alt="">
+              </a>
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </a>
+        </div>
+
+        <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+          <a href="/learn/film/id">
+            <mat-card class="example-card">
+              <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+              <a href="/learn/film/id" class="play_icon">
+                <img src="../../../assets/play.png" alt="">
+              </a>
+              <mat-card-content>
+                <p>
+                  The Shiba Inu is the smallest of the six original and
+                </p>
+              </mat-card-content>
+            </mat-card>
+          </a>
+        </div>
+      </div>
+    </mat-tab>
+  </mat-tab-group>
+
+
   <div class="row" dir="rtl" *ngIf="isArticle">
     <div class="col-lg-12 title">
       <h1>عنوان مجموعه خبر</h1>
