adding contact template and some items email phone and address and social

--- a/src/app/modules/contact/contact.component.html
+++ b/src/app/modules/contact/contact.component.html
@@ -1,1 +1,65 @@
-<p>contact works!</p>
+<div class="container">
+  <div class="row" dir="rtl">
+    <div class="col-lg-12">
+      <mat-card>
+        <h1>ارتباط با ما</h1>
+        <div class="row">
+
+          <div class="col-lg-6 col-md-6 col-sm-12 col-12 explanation">
+            <div class="content">
+              <mat-icon>crop_square</mat-icon>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae exercitationem iure itaque quasi officia dicta nemo id omnis atque eveniet debitis, aspernatur accusantium assumenda et tempore illo dolore odio dolorum.</p>
+            </div>
+
+            <div class="my_email">
+              <mat-icon >email</mat-icon>
+              <p>Example@example.com</p>
+            </div>
+
+            <div class="my_phone">
+              <mat-icon>phone</mat-icon>
+              <p>348729872</p>
+            </div>
+
+            <div class="my_location">
+              <mat-icon>location_on</mat-icon>
+              <p>yajhd kajsdkcjb jhasdbjh </p>
+            </div>
+
+            <div class="social">
+              <h2>مارا در شبکه های اجنماعی دنبال کنید</h2>
+              <img src="../../../assets/instagram.png" alt="">
+              <img src="../../../assets/telegram.png" alt="">
+              <img src="../../../assets/whatsapp.png" alt="">
+            </div>
+
+          </div>
+
+          <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+            <form class="example-form">
+
+              <mat-form-field class="example">
+                <mat-label>نام</mat-label>
+                <input matInput placeholder="نام خود را وارد نمایید">
+              </mat-form-field>
+
+              <mat-form-field class="example">
+                <mat-label>ایمیل</mat-label>
+                <input matInput placeholder="ایمیل خود را وارد نمایید">
+              </mat-form-field>
+
+              <mat-form-field class="example-full-width">
+                <mat-label>پیام شما</mat-label>
+                <textarea rows="10" matInput placeholder="نظر خود را وارد نمایید"></textarea>
+              </mat-form-field>
+
+              <button mat-raised-button color="primary">ارسال</button>
+
+            </form>
+          </div>
+
+        </div>
+      </mat-card>
+    </div>
+  </div>
+</div>
