adding link to see more of the film and article in /learn/item

--- a/src/app/modules/news/news.component.scss
+++ b/src/app/modules/news/news.component.scss
@@ -19,6 +19,10 @@ mat-divider {
   text-align: right;
   font-family: "BKoodakBold";
   font-size: 30px;
+  a {
+    float: left;
+    font-size: 18px;
+  }
 }
 
 .video_box {
