--- a/src/app/modules/news/news.component.html
+++ b/src/app/modules/news/news.component.html
@@ -6,7 +6,10 @@
     <mat-tab label="نمایش همه">
       <div class="row" dir="rtl" *ngIf="isLearn">
         <div class="col-lg-12 title">
-          <h1>عنوان مجموعه خبر</h1>
+          <h1>
+            عنوان مجموعه خبر
+            <a href="/learn/article">مشاهده بیشتر</a>
+          </h1>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6 col-12">
           <a href="/learn/article/id">
@@ -65,7 +68,10 @@
 
       <div class="row video_box" dir="rtl" *ngIf="isLearn">
         <div class="col-lg-12 title">
-          <h1>عنوان مجموعه فیلم</h1>
+          <h1>
+            عنوان مجموعه فیلم
+            <a href="/learn/film">مشاهده بیشتر</a>
+          </h1>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6 col-12">
           <a href="/learn/film/id">
@@ -137,7 +143,10 @@
     <mat-tab label="مقالات">
       <div class="row" dir="rtl" *ngIf="isLearn">
         <div class="col-lg-12 title">
-          <h1>عنوان مجموعه خبر</h1>
+          <h1>
+            عنوان مجموعه خبر
+            <a href="/learn/article">مشاهده بیشتر</a>
+          </h1>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6 col-12">
           <a href="/learn/article/id">
@@ -195,7 +204,10 @@
     <mat-tab label="ویدئوها">
       <div class="row video_box" dir="rtl" *ngIf="isLearn">
         <div class="col-lg-12 title">
-          <h1>عنوان مجموعه فیلم</h1>
+          <h1>
+            عنوان مجموعه فیلم
+            <a href="/learn/film">مشاهده بیشتر</a>
+          </h1>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6 col-12">
           <a href="/learn/film/id">
