getting ng build --prod

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -128,7 +128,7 @@
               </a>
               <a href="/register" style="color:black;text-decoration:none;">
                   <button mat-menu-item *ngIf="!register">
-                  <mat-icon>how_to_reg</mat-icon>
+                  <mat-icon>check</mat-icon>
                   عضویت
                 </button>
               </a>
