--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,1 +1,29 @@
-<p>dashboard works!</p>
+<div class="container">
+  <div class="row tools_button" dir="rtl">
+    <div class="col-lg-12">
+      <mat-card>
+        <button mat-raised-button (click)="addImage()">Add Image</button>
+        <button mat-raised-button (click)="addText()">Add Text</button>
+
+      </mat-card>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg-12">
+      <mat-card>
+        <div class="row">
+          <form [formGroup]="userForm" (ngSubmit)="onFormSubmit()" #content_box>
+            <!-- Name: <input formControlName="name"  placeholder="Enter Name">
+            Age: <input formControlName="age"  placeholder="Enter Age"> -->
+            <button type="submit">Submit</button>
+          </form>
+        </div>
+      </mat-card>
+    </div>
+  </div>
+</div>
+
+
+<!-- <span style="color:red;" *ngIf="message">{{message}}</span>
+<input #file type="file" accept='image/*' (change)="preview(file.files)" />
+<img [src]="imgURL" height="200" *ngIf="imgURL"> -->
