adding footer to the project with about site part menu part and subscribe and social part

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,5 +1,70 @@
 <mat-divider></mat-divider>
 
 <footer>
-  &copy; All rights reserved 2020
+  <div class="container">
+    <div class="row" dir="rtl">
+      <div class="col-lg-4">
+        <h1>درباره سایت</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut pariatur unde soluta qui dolores obcaecati nesciunt facere earum culpa inventore ex, deleniti in? Maxime, corporis enim quasi delectus error a.</p>
+      </div>
+      <div class="col-lg-4">
+        <h1>منوی سایت</h1>
+        <div class="row">
+          <div class="col-lg-4">
+            <ul>
+              <li>
+                <a href="/learn">آموزش</a>
+              </li>
+              <li>
+                <a href="/analysis">تحلیل</a>
+              </li>
+              <li>
+                <a href="/news">اخبار</a>
+              </li>
+              <li>
+                <a href="/contact">ارتباط با ما</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-lg-4">
+            <ul>
+              <li>
+                <a href="/marketmap">نقشه بازار</a>
+              </li>
+              <li>
+                <a href="/indexes">شاخص ها</a>
+              </li>
+              <li>
+                <a href="/stock">سهام</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+      <div class="col-lg-4">
+        <h1>از آخرین اخبار و اموزش ها باخبر شوید:</h1>
+        <div class="form">
+          <form class="form-inline">
+            <div class="form-group">
+              <input type="password" class="form-control" placeholder="ایمیل خود را وارد نمایید">
+              <button mat-raised-button color="primary">ارسال</button>
+            </div>
+          </form>
+        </div>
+        <div class="social_icons">
+          <h3>ما را در شبکه های اجتماعی دنبال کنید:</h3>
+          <span>
+            <img src="../../../assets/telegram.png" alt="">
+          </span>
+          <span>
+            <img src="../../../assets/whatsapp.png" alt="">
+          </span>
+          <span>
+            <img src="../../../assets/instagram.png" alt="">
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
 </footer>
