--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,3 +1,53 @@
+* {
+  font-family: "BKoodakBold";
+}
 footer {
   padding: 20px;
+}
+
+h1, p, h3{
+  text-align: right;
+  font-family: "BKoodakBold";
+}
+
+h3 {
+  width: 120%;
+}
+
+ul {
+  padding: 0;
+  list-style: none;
+  li {
+    display: flex;
+    text-align: right;
+    a {
+      color: black;
+      text-decoration: none;
+      font-size: 17px;
+      line-height: 25px;
+    }
+    a:hover {
+      color: rgb(6, 160, 165);
+    }
+  }
+}
+
+.form {
+  margin-left: 30%;
+  width: 100%;
+  input{
+    width: 75%;
+    height: 37px;
+  }
+}
+
+.social_icons {
+  margin-top: 5%;
+  width: 100%;
+  img {
+    float: right;
+    width: 40px;
+    height: 40px;
+    margin-left: 10%;
+  }
 }
