adding another item to list of other

--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -121,6 +121,19 @@
       </a>
     </div>
 
+    <div class="col-lg-2 col-md-6 col-sm-6 col-12">
+      <a href="/news/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <p>
+              The Shiba Inu is the smallest of the six original and
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </a>
+    </div>
+
   </div>
 
   <br><br><br>
@@ -207,6 +220,19 @@
 
     <div class="col-lg-12 col-md-12 col-sm-12 title">
       <h2>سایر آموزش ها</h2>
+    </div>
+
+    <div class="col-lg-2 col-md-6 col-sm-6 col-12">
+      <a href="/learn/article/id">
+        <mat-card class="example-card">
+          <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+          <mat-card-content>
+            <p>
+              The Shiba Inu is the smallest of the six original and
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </a>
     </div>
 
     <div class="col-lg-2 col-md-6 col-sm-6 col-12">
