working on mobile size project

--- a/src/app/modules/news/news.component.html
+++ b/src/app/modules/news/news.component.html
@@ -5,7 +5,7 @@
   <mat-tab-group mat-align-tabs="center" *ngIf="isLearn">
     <mat-tab label="نمایش همه">
       <div class="row" dir="rtl" *ngIf="isLearn">
-        <div class="col-lg-12 title">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-12 title">
           <h1>
             عنوان مجموعه خبر
             <a href="/learn/article">مشاهده بیشتر</a>
