--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -209,17 +209,17 @@
             </mat-menu>
 
             <mat-menu #market="matMenu">
-              <a href="/" style="color:black;text-decoration:none;">
+              <a href="/marketmap" style="color:black;text-decoration:none;">
                 <button mat-menu-item>
                   نقشه بازار
                 </button>
               </a>
-              <a href="/" style="color:black;text-decoration:none;">
+              <a href="/indexes" style="color:black;text-decoration:none;">
                 <button mat-menu-item>
                   شاخص ها
                 </button>
               </a>
-              <a href="/" style="color:black;text-decoration:none;">
+              <a href="/stock" style="color:black;text-decoration:none;">
                 <button mat-menu-item>
                   سهام
                 </button>
