--- a/src/app/layouts/admin/admin.component.html
+++ b/src/app/layouts/admin/admin.component.html
@@ -1,19 +1,27 @@
 <app-header [status]="status" (toggleSideBarForMe)="sideBarToggler($event)"></app-header>
 
-<mat-drawer-container dir="rtl">
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-lg-12">
+      <mat-drawer-container dir="rtl">
 
-  <mat-drawer mode="side" [opened]="sideBarOpen">
+        <mat-drawer mode="side" [opened]="sideBarOpen">
 
-    <app-sidebar></app-sidebar>
+          <app-sidebar></app-sidebar>
 
-  </mat-drawer>
+        </mat-drawer>
 
-  <mat-drawer-content>
+        <mat-drawer-content>
 
-    <router-outlet></router-outlet>
+          <router-outlet></router-outlet>
 
-  </mat-drawer-content>
+        </mat-drawer-content>
 
-</mat-drawer-container>
+      </mat-drawer-container>
+    </div>
+    <div class="col-lg-12">
+      <app-footer></app-footer>
+    </div>
+  </div>
+</div>
 
-<app-footer></app-footer>
