--- a/src/app/modules/home-page/home-page.component.scss
+++ b/src/app/modules/home-page/home-page.component.scss
@@ -109,6 +109,20 @@ h2 {
 }
 
 @media screen and (max-width:820px) {
+  .main_news{
+    h1 a {
+      margin-right: 60%;
+    }
+  }
+
+  .learn {
+    .main_video {
+      h1 a {
+        margin-right: 55%;
+      }
+    }
+  }
+
   .data_table {
     margin-top: 10%;
   }
@@ -136,18 +150,18 @@ h2 {
     }
     .main-news img {
       width: 100%;
-      height: 300px;
+      height: 250px;
     }
   }
 
   .learn {
     .main_video {
       h1 a {
-        margin-right: 35%;
+        margin-right: 30%;
       }
       .main-news img {
         width: 100%;
-        height: 300px;
+        height: 250px;
       }
     }
   }
