--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -3,11 +3,11 @@
 <footer>
   <div class="container">
     <div class="row" dir="rtl">
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-md-12 col-sm-12 col-12">
         <h1>درباره سایت</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut pariatur unde soluta qui dolores obcaecati nesciunt facere earum culpa inventore ex, deleniti in? Maxime, corporis enim quasi delectus error a.</p>
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-md-12 col-sm-12 col-12">
         <h1>منوی سایت</h1>
         <div class="row">
           <div class="col-lg-4">
@@ -42,7 +42,7 @@
         </div>
 
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 col-md-12 col-sm-12 col-12">
         <h1>از آخرین اخبار و اموزش ها باخبر شوید:</h1>
         <div class="form">
           <form class="form-inline">
