--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -51,3 +51,19 @@ ul {
     margin-left: 10%;
   }
 }
+
+@media screen and (max-width:576px) {
+  .form {
+    width: 100%;
+    .form-group{
+      width: 100%;
+      input{
+        width: 80%;
+        height: 37px;
+      }
+      button {
+        float: right;
+      }
+    }
+  }
+}
