changing order of the content

--- a/src/app/modules/contact/contact.component.scss
+++ b/src/app/modules/contact/contact.component.scss
@@ -58,6 +58,7 @@ mat-card {
   .social {
     padding-top: 5%;
     img {
+      cursor: pointer;
       width: 40px;
       height: 40px;
       margin-right: 5%;
