--- a/src/app/modules/contact/contact.component.html
+++ b/src/app/modules/contact/contact.component.html
@@ -5,36 +5,6 @@
         <h1>ارتباط با ما</h1>
         <div class="row">
 
-          <div class="col-lg-6 col-md-6 col-sm-12 col-12 explanation">
-            <div class="content">
-              <mat-icon>crop_square</mat-icon>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae exercitationem iure itaque quasi officia dicta nemo id omnis atque eveniet debitis, aspernatur accusantium assumenda et tempore illo dolore odio dolorum.</p>
-            </div>
-
-            <div class="my_email">
-              <mat-icon >email</mat-icon>
-              <p>Example@example.com</p>
-            </div>
-
-            <div class="my_phone">
-              <mat-icon>phone</mat-icon>
-              <p>348729872</p>
-            </div>
-
-            <div class="my_location">
-              <mat-icon>location_on</mat-icon>
-              <p>yajhd kajsdkcjb jhasdbjh </p>
-            </div>
-
-            <div class="social">
-              <h2>مارا در شبکه های اجنماعی دنبال کنید</h2>
-              <img src="../../../assets/instagram.png" alt="">
-              <img src="../../../assets/telegram.png" alt="">
-              <img src="../../../assets/whatsapp.png" alt="">
-            </div>
-
-          </div>
-
           <div class="col-lg-6 col-md-6 col-sm-12 col-12">
             <form class="example-form">
 
@@ -56,6 +26,36 @@
               <button mat-raised-button color="primary">ارسال</button>
 
             </form>
+          </div>
+
+          <div class="col-lg-6 col-md-6 col-sm-12 col-12 explanation">
+            <div class="content">
+              <mat-icon>person</mat-icon>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae exercitationem iure itaque quasi officia dicta nemo id omnis atque eveniet debitis, aspernatur accusantium assumenda et tempore illo dolore odio dolorum.</p>
+            </div>
+
+            <div class="my_email">
+              <mat-icon >email</mat-icon>
+              <p>Example@example.com</p>
+            </div>
+
+            <div class="my_phone">
+              <mat-icon>phone</mat-icon>
+              <p>348729872</p>
+            </div>
+
+            <div class="my_location">
+              <mat-icon>location_on</mat-icon>
+              <p>yajhd kajsdkcjb jhasdbjh </p>
+            </div>
+
+            <div class="social">
+              <h2>مارا در شبکه های اجنماعی دنبال کنید:</h2>
+              <img src="../../../assets/instagram.png" alt="">
+              <img src="../../../assets/telegram.png" alt="">
+              <img src="../../../assets/whatsapp.png" alt="">
+            </div>
+
           </div>
 
         </div>
