--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -47,7 +47,7 @@
         <div class="form">
           <form class="form-inline">
             <div class="form-group">
-              <input type="password" class="form-control" placeholder="ایمیل خود را وارد نمایید">
+              <input type="email" class="form-control" placeholder="ایمیل خود را وارد نمایید">
               <button mat-raised-button color="primary">ارسال</button>
             </div>
           </form>
