--- a/src/app/modules/details/details.component.html
+++ b/src/app/modules/details/details.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row" dir="rtl">
-    <div class="col-lg-9 content_box">
+    <div class="col-lg-8 content_box">
       <div>
         <mat-card class="main-news">
           <h1>عنوان خبر</h1>
@@ -30,23 +30,14 @@
       </div>
     </div>
 
-    <div class="col-lg-3 sub_menu">
-      <div class="sticky-top" style="padding-top: 5%;">
+    <div class="col-lg-4 sub_menu">
+      <div class="sticky-top">
         <div class="row">
-          <div class="col-lg-12">
-            <mat-card class="example-card">
-              <mat-card-content>
-                <span>
-                  <img src="../../../assets/telegram.png" alt="">
-                </span>
-                <span>
-                  <img src="../../../assets/whatsapp.png" alt="">
-                </span>
-                <span>
-                  <img src="../../../assets/instagram.png" alt="">
-                </span>
-              </mat-card-content>
-            </mat-card>
+          <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+            <h1>
+              <img src="../../../assets/paper.png" alt="">
+              مطالب مرتبط
+            </h1>
           </div>
           <div class="col-lg-12 col-md-6 col-sm-6 col-12">
             <mat-card class="example-card">
@@ -70,7 +61,78 @@
           </div>
         </div>
       </div>
-      <mat-divider></mat-divider>
+    </div>
+  </div>
+
+  <div class="row " dir="rtl">
+    <div class="col-lg-8 opinion">
+      <mat-card class="opinion_card">
+        <h1>
+          <img src="../../../assets/opinion (1).png" alt="">
+          دیدگاه شما
+        </h1>
+        <form class="example-form">
+
+          <mat-form-field appearance="fill" class="input_name">
+            <mat-label>نام</mat-label>
+            <input matInput placeholder="نام خود را وارد نمایید">
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="input_email">
+            <mat-label>ایمیل</mat-label>
+            <input matInput placeholder="ایمیل خود را وارد نمایید">
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="text_area">
+            <mat-label>پیام شما</mat-label>
+            <textarea rows="10" matInput placeholder="نظر خود را وارد نمایید"></textarea>
+          </mat-form-field>
+
+          <button mat-raised-button color="primary">ارسال</button>
+
+        </form>
+      </mat-card>
+    </div>
+
+    <div class="col-lg-4 learn_list">
+      <div class="sticky-top">
+        <h1>
+          <img src="../../../assets/article_icon.png" alt="">
+          اخبار
+        </h1>
+
+        <mat-list role="list">
+          <mat-list-item role="listitem">
+            <a href="/learn/article/id">
+              sdkjsjd
+            </a>
+          </mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item role="listitem">
+            <a href="/learn/article/id">
+              Itdfgsd sdfg sddg sgsdfbem jkkj kj kj kj kj kj kj jk 2
+            </a>
+          </mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item role="listitem">
+            <a href="/learn/article/id">
+              Item 3
+            </a>
+          </mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item role="listitem">
+            <a href="/learn/article/id">
+              Item 3
+            </a>
+          </mat-list-item>
+          <mat-divider></mat-divider>
+          <mat-list-item role="listitem">
+            <a href="/learn/article/id">
+              Item 3
+            </a>
+          </mat-list-item>
+        </mat-list>
+      </div>
     </div>
   </div>
 </div>
