--- a/src/app/modules/details/details.component.scss
+++ b/src/app/modules/details/details.component.scss
@@ -2,8 +2,32 @@
   font-family: "BKoodakBold";
 }
 
+h1{
+  font-size: 20px;
+  text-align: right;
+  font-family: "BKoodakBold";
+}
+
+.container {
+  margin-top: 0%;
+  .row {
+    margin-top: 0%;
+
+  }
+}
+
+.sticky-top {
+  width: 100%;
+  margin-top: 10%;
+  padding-top: 3%;
+  h1 img{
+    width: 30px;
+    height: 30px;
+  }
+}
+
 .content_box {
-  margin-top: 5%;
+  margin-top: 3%;
   h1{
     font-size: 30px;
     text-align: right;
@@ -33,7 +57,6 @@
 }
 
 .sub_menu {
-  margin-top: 3%;
   .example-card {
     margin-bottom: 5%;
     img {
@@ -66,9 +89,66 @@
   }
 }
 
+.opinion{
+  margin-top: 3%;
+  .opinion_card{
+    padding-bottom: 4%;
+  }
+  h1 img {
+    width: 40px;
+    height: 40px;
+  }
+  .example-form {
+    width: 100%;
+    .input_name, .input_email {
+      float: right;
+      width: 40%;
+    }
+
+    .input_email {
+      margin-right: 5%;
+    }
+
+    .text_area{
+      width: 100%;
+      padding-left: 15%;
+    }
+
+    button{
+      width: 15%;
+      margin-left: 15%;
+    }
+  }
+}
+
+.learn_list {
+  mat-list {
+    margin-left: 5%;
+    box-shadow: 5px 10px 18px #b9b8b8;
+    height: 350px;
+    background-color: white;
+    mat-divider{
+      width: 90%;
+      margin-right: 5%;
+    }
+    mat-list-item {
+      height: 65px;
+      a {
+        text-decoration: none;
+        color: black;
+      }
+
+      a:hover {
+        color: rgb(5, 128, 199);
+      }
+    }
+  }
+}
+
 @media screen and (max-width:820px) {
   .sub_menu {
     .example-card {
+      width: 109%;
       img {
         max-width: 400px;
         height: 250px;
@@ -85,6 +165,7 @@
 @media screen and (max-width:576px) {
   .sub_menu {
     .example-card {
+      width: 110%;
       img {
         max-width: 400px;
         height: 250px;
@@ -101,7 +182,35 @@
     margin-top: 5%;
     img {
       width: 100%;
-      height: 250px;
+      height: 200px;
+    }
+  }
+
+  .opinion{
+    margin-top: 3%;
+    h1 img {
+      width: 40px;
+      height: 40px;
+    }
+    .example-form {
+      width: 100%;
+      .input_name, .input_email {
+        float: right;
+        width: 100%;
+      }
+
+      .input_email {
+        margin-right: 0%;
+      }
+
+      .text_area{
+        width: 100%;
+        padding-left: 0%;
+      }
+
+      button{
+        margin-left: 0%;
+      }
     }
   }
 }
