--- a/src/app/modules/news/news.component.html
+++ b/src/app/modules/news/news.component.html
@@ -277,7 +277,7 @@
   </mat-tab-group>
 
 
-  <div class="row" dir="rtl" *ngIf="isArticle">
+  <div class="row article_box" dir="rtl" *ngIf="isArticle">
     <div class="col-lg-12 title">
       <h1>عنوان مجموعه خبر</h1>
     </div>
@@ -286,9 +286,9 @@
         <mat-card class="example-card">
           <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
           <mat-card-content>
-            <p>
+            <a class="little_desc">
               The Shiba Inu is the smallest of the six original and
-            </p>
+            </a>
           </mat-card-content>
         </mat-card>
       </a>
@@ -299,9 +299,9 @@
         <mat-card class="example-card">
           <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
           <mat-card-content>
-            <p>
+            <a class="little_desc">
               The Shiba Inu is the smallest of the six original and
-            </p>
+            </a>
           </mat-card-content>
         </mat-card>
       </a>
@@ -312,9 +312,9 @@
         <mat-card class="example-card">
           <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
           <mat-card-content>
-            <p>
+            <a class="little_desc">
               The Shiba Inu is the smallest of the six original and
-            </p>
+            </a>
           </mat-card-content>
         </mat-card>
       </a>
@@ -325,9 +325,9 @@
         <mat-card class="example-card">
           <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
           <mat-card-content>
-            <p>
+            <a class="little_desc">
               The Shiba Inu is the smallest of the six original and
-            </p>
+            </a>
           </mat-card-content>
         </mat-card>
       </a>
@@ -348,9 +348,9 @@
             <img src="../../../assets/play.png" alt="">
           </a>
           <mat-card-content>
-            <p>
-              The Shiba Inu is the smallest of the six original and
-            </p>
+            <a class="little_desc">
+                The Shiba Inu is the smallest of the six original and
+            </a>
           </mat-card-content>
         </mat-card>
       </a>
@@ -364,9 +364,9 @@
             <img src="../../../assets/play.png" alt="">
           </a>
           <mat-card-content>
-            <p>
+            <a class="little_desc">
               The Shiba Inu is the smallest of the six original and
-            </p>
+            </a>
           </mat-card-content>
         </mat-card>
       </a>
@@ -380,9 +380,9 @@
             <img src="../../../assets/play.png" alt="">
           </a>
           <mat-card-content>
-            <p>
+            <a class="little_desc">
               The Shiba Inu is the smallest of the six original and
-            </p>
+            </a>
           </mat-card-content>
         </mat-card>
       </a>
@@ -396,9 +396,9 @@
             <img src="../../../assets/play.png" alt="">
           </a>
           <mat-card-content>
-            <p>
+            <a class="little_desc">
               The Shiba Inu is the smallest of the six original and
-            </p>
+            </a>
           </mat-card-content>
         </mat-card>
       </a>
@@ -407,7 +407,7 @@
 
   <mat-divider *ngIf="isFilm"></mat-divider>
 
-  <div class="row" dir="rtl" *ngIf="isNews">
+  <div class="row news_box" dir="rtl" *ngIf="isNews">
     <div class="col-lg-12 title">
       <h1>هاعنوان مجموعه خبر</h1>
     </div>
@@ -416,9 +416,9 @@
         <mat-card class="example-card">
           <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
           <mat-card-content>
-            <p>
+            <a class="little_desc">
               The Shiba Inu is the smallest of the six original and
-            </p>
+            </a>
           </mat-card-content>
         </mat-card>
       </a>
@@ -429,9 +429,9 @@
         <mat-card class="example-card">
           <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
           <mat-card-content>
-            <p>
+            <a class="little_desc">
               The Shiba Inu is the smallest of the six original and
-            </p>
+            </a>
           </mat-card-content>
         </mat-card>
       </a>
@@ -442,9 +442,9 @@
         <mat-card class="example-card">
           <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
           <mat-card-content>
-            <p>
+            <a class="little_desc">
               The Shiba Inu is the smallest of the six original and
-            </p>
+            </a>
           </mat-card-content>
         </mat-card>
       </a>
@@ -455,9 +455,9 @@
         <mat-card class="example-card">
           <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
           <mat-card-content>
-            <p>
+            <a class="little_desc">
               The Shiba Inu is the smallest of the six original and
-            </p>
+            </a>
           </mat-card-content>
         </mat-card>
       </a>
