--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -10,7 +10,7 @@
       <div class="col-lg-4 col-md-12 col-sm-12 col-12">
         <h1>منوی سایت</h1>
         <div class="row">
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-12">
             <ul>
               <li>
                 <a href="/learn">آموزش</a>
@@ -26,7 +26,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-md-4 col-sm-4 col-12">
             <ul>
               <li>
                 <a href="/marketmap">نقشه بازار</a>
