adding new item to homepage list

--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -211,6 +211,12 @@
             Item 3
           </a>
         </mat-list-item>
+        <mat-divider></mat-divider>
+        <mat-list-item role="listitem">
+          <a href="/learn/article/id">
+            Item 3
+          </a>
+        </mat-list-item>
       </mat-list>
     </div>
 
