--- a/src/app/modules/news/news.component.html
+++ b/src/app/modules/news/news.component.html
@@ -4,7 +4,7 @@
 
   <mat-tab-group mat-align-tabs="center" *ngIf="isLearn">
     <mat-tab label="نمایش همه">
-      <div class="row" dir="rtl" *ngIf="isLearn">
+      <div class="row article_box" dir="rtl" *ngIf="isLearn">
         <div class="col-lg-12 col-md-12 col-sm-12 col-12 title">
           <h1>
             عنوان مجموعه خبر
@@ -16,9 +16,9 @@
             <mat-card class="example-card">
               <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
               <mat-card-content>
-                <p>
+                <a class="little_desc">
                   The Shiba Inu is the smallest of the six original and
-                </p>
+                </a>
               </mat-card-content>
             </mat-card>
           </a>
@@ -29,9 +29,9 @@
             <mat-card class="example-card">
               <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
               <mat-card-content>
-                <p>
+                <a class="little_desc">
                   The Shiba Inu is the smallest of the six original and
-                </p>
+                </a>
               </mat-card-content>
             </mat-card>
           </a>
@@ -42,9 +42,9 @@
             <mat-card class="example-card">
               <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
               <mat-card-content>
-                <p>
+                <a class="little_desc">
                   The Shiba Inu is the smallest of the six original and
-                </p>
+                </a>
               </mat-card-content>
             </mat-card>
           </a>
@@ -55,9 +55,9 @@
             <mat-card class="example-card">
               <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
               <mat-card-content>
-                <p>
+                <a class="little_desc">
                   The Shiba Inu is the smallest of the six original and
-                </p>
+                </a>
               </mat-card-content>
             </mat-card>
           </a>
@@ -81,9 +81,9 @@
                 <img src="../../../assets/play.png" alt="">
               </a>
               <mat-card-content>
-                <p>
+                <a class="little_desc">
                   The Shiba Inu is the smallest of the six original and
-                </p>
+                </a>
               </mat-card-content>
             </mat-card>
           </a>
@@ -97,9 +97,9 @@
                 <img src="../../../assets/play.png" alt="">
               </a>
               <mat-card-content>
-                <p>
+                <a class="little_desc">
                   The Shiba Inu is the smallest of the six original and
-                </p>
+                </a>
               </mat-card-content>
             </mat-card>
           </a>
@@ -113,9 +113,9 @@
                 <img src="../../../assets/play.png" alt="">
               </a>
               <mat-card-content>
-                <p>
+                <a class="little_desc">
                   The Shiba Inu is the smallest of the six original and
-                </p>
+                </a>
               </mat-card-content>
             </mat-card>
           </a>
@@ -129,9 +129,9 @@
                 <img src="../../../assets/play.png" alt="">
               </a>
               <mat-card-content>
-                <p>
+                <a class="little_desc">
                   The Shiba Inu is the smallest of the six original and
-                </p>
+                </a>
               </mat-card-content>
             </mat-card>
           </a>
@@ -141,7 +141,7 @@
     </mat-tab>
 
     <mat-tab label="مقالات">
-      <div class="row" dir="rtl" *ngIf="isLearn">
+      <div class="row article_box" dir="rtl" *ngIf="isLearn">
         <div class="col-lg-12 title">
           <h1>
             عنوان مجموعه خبر
@@ -153,9 +153,9 @@
             <mat-card class="example-card">
               <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
               <mat-card-content>
-                <p>
+                <a class="little_desc">
                   The Shiba Inu is the smallest of the six original and
-                </p>
+                </a>
               </mat-card-content>
             </mat-card>
           </a>
@@ -166,9 +166,9 @@
             <mat-card class="example-card">
               <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
               <mat-card-content>
-                <p>
+                <a class="little_desc">
                   The Shiba Inu is the smallest of the six original and
-                </p>
+                </a>
               </mat-card-content>
             </mat-card>
           </a>
@@ -179,9 +179,9 @@
             <mat-card class="example-card">
               <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
               <mat-card-content>
-                <p>
+                <a class="little_desc">
                   The Shiba Inu is the smallest of the six original and
-                </p>
+                </a>
               </mat-card-content>
             </mat-card>
           </a>
@@ -192,9 +192,9 @@
             <mat-card class="example-card">
               <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
               <mat-card-content>
-                <p>
+                <a class="little_desc">
                   The Shiba Inu is the smallest of the six original and
-                </p>
+                </a>
               </mat-card-content>
             </mat-card>
           </a>
@@ -217,9 +217,9 @@
                 <img src="../../../assets/play.png" alt="">
               </a>
               <mat-card-content>
-                <p>
+                <a class="little_desc">
                   The Shiba Inu is the smallest of the six original and
-                </p>
+                </a>
               </mat-card-content>
             </mat-card>
           </a>
@@ -233,9 +233,9 @@
                 <img src="../../../assets/play.png" alt="">
               </a>
               <mat-card-content>
-                <p>
+                <a class="little_desc">
                   The Shiba Inu is the smallest of the six original and
-                </p>
+                </a>
               </mat-card-content>
             </mat-card>
           </a>
@@ -249,9 +249,9 @@
                 <img src="../../../assets/play.png" alt="">
               </a>
               <mat-card-content>
-                <p>
+                <a class="little_desc">
                   The Shiba Inu is the smallest of the six original and
-                </p>
+                </a>
               </mat-card-content>
             </mat-card>
           </a>
@@ -265,9 +265,9 @@
                 <img src="../../../assets/play.png" alt="">
               </a>
               <mat-card-content>
-                <p>
+                <a class="little_desc">
                   The Shiba Inu is the smallest of the six original and
-                </p>
+                </a>
               </mat-card-content>
             </mat-card>
           </a>
