--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -140,6 +140,66 @@
   <mat-divider></mat-divider>
   <br><br><br>
 
+  <div class="row analysis" dir="rtl">
+
+    <div class="col-lg-12 col-md-12 col-sm-12 title">
+      <h1>
+        <img src="../../../assets/analysis.png" alt="">
+        تحلیل ها
+        <a href="/analysis">مشاهده بیشتر</a>
+      </h1>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <mat-card class="example-card">
+        <img class="video_image" mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <mat-card class="example-card">
+        <img class="video_image" mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <mat-card class="example-card">
+        <img class="video_image" mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-sm-6 col-12">
+      <mat-card class="example-card">
+        <img class="video_image" mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            The Shiba Inu is the smallest of the six original and
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+  </div>
+
+  <br><br><br>
+  <mat-divider></mat-divider>
+  <br><br><br>
+
   <div class="row learn" dir="rtl">
 
     <!-- main videos mat card  -->
@@ -305,6 +365,7 @@
       <h1>
         <img src="../../../assets/video_icon.png" alt="">
         ویدئوها
+        <a href="/learn/film">مشاهده بیشتر</a>
       </h1>
     </div>
 
